design part first commit

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -131,8 +131,9 @@
 \renewcommand{\contentsname}{Table of Contents}
 \include{content/coverpage}
 \include{content/acknow}
+\setcounter{tocdepth}{1}
 \tableofcontents
-\include{content/theory}
+\include{content/intro}
 \include{content/implement}
 \include{content/conclusion}
 \end{document}
