--- a/latex/content/intro.tex
+++ b/latex/content/intro.tex
@@ -11,7 +11,8 @@ The main goal is to design and simulate a microcontroller-based traffic light sy
 The system must meet the following technical requirements:
 \begin{itemize}
     \vspace{-5pt}
-    \item \textbf{Microcontroller:} Utilize a standard 8 - bit microcontroller.
+    \item \textbf{Microcontroller:} Utilize 32-bit microcontroller in STM32F103xx 
+    medium-density performance line family, specifically STM32F103RBT6.
     \vspace{-5pt}
     \item \textbf{Display:} Two sets of traffic lights for two directions. A 16x2 LCD module must display the current mode and the countdown timer.
     \vspace{-5pt}
