--- a/latex/main.tex
+++ b/latex/main.tex
@@ -134,6 +134,7 @@
 \setcounter{tocdepth}{1}
 \tableofcontents
 \include{content/intro}
-\include{content/implement}
+\include{content/hardware}
+\include{content/software}
 \include{content/conclusion}
 \end{document}
